# MilsimProject

./: CMakeLists.txt  README.md
shaders/: basic.frag  basic.vert
src/: CMakeLists.txt  main.cpp
